crud - editar e excluir categorias

--- a/templates/categoria/form.html.twig
+++ b/templates/categoria/form.html.twig
@@ -3,6 +3,7 @@
 {% block title %}{{ titulo }}{% endblock %}
 
 {% block body %}
+<a href="{{path('categoria')}}" class="btn btn-primary">Lista de categorias</a>
 <h1>{{ titulo }}</h1>
 {{form(form)}}
 <p>{{msg}}</p>
