--- a/templates/categoria/index.html.twig
+++ b/templates/categoria/index.html.twig
@@ -20,8 +20,8 @@
             <td>{{ categoria.id}}</td>
             <td>{{ categoria.descricaocategoria}}</td>
             <td>
-                <a href="#" class="btn btn-primary">Editar</a>
-                <a href="#" class="btn btn-danger">Excluir</a>
+                <a href="{{ path('categoriaEditar', {id: categoria.id}) }}" class="btn btn-primary">Editar</a>
+                <a href="{{ path('categoriaExcluir', {id: categoria.id}) }}" class="btn btn-danger">Excluir</a>
             </td>
         </tr>
     {% endfor %}
