--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,22 @@
         {% endblock %} #}
     </head>
     <body>
+    <nav class="navbar navbar-expand navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="#">Symfony App</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('categoria') }}">Categorias</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('produto') }}">Produtos</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    </nav>
+
     <div class="container">
         {% block body %}{% endblock %}
     </div>
