--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,6 +20,7 @@
     <nav class="navbar navbar-expand navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="#">Symfony App</a>
+        {% if is_granted('ROLE_USER') %}
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -28,11 +29,17 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('produto') }}">Produtos</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_logout') }}">Sair</a>
+                </li>
+                 <li class="nav-item">
+                    <a class="nav-link"  disabled >Usuário: {{app.user.nome}}</a>
+                </li>
             </ul>
         </div>
     </div>
+    {% endif %} 
     </nav>
-
     <div class="container">
         {% block body %}{% endblock %}
     </div>
